renaming of files

--- a/Din_plan-food.html
+++ b/Din_plan-food.html
@@ -52,11 +52,11 @@
   </section>
 
   <section class="step__nav">
-    <a href="Din_plan-Height.html" class="button button--secondary">
+    <a href="din_plan-Height.html" class="button button--secondary">
       <img src="images/arrow_back-white.svg" class="button__icon" />
       <span>Tilbage</span>
     </a>
-    <a href="din_plan-food.html" class="button button--primary">
+    <a href="din_plan-shows.html" class="button button--primary">
       <img src="images/play_icon.svg" alt="" class="button__icon" />
       <span>Næste</span>
     </a>
