--- a/Din_plan.html
+++ b/Din_plan.html
@@ -39,7 +39,7 @@
     <h2 class="DinPlan__prompt">Er du klar?</h2>
   
     <!-- CTA button to start -->
-    <button class="button button__primary--big" onclick="event.stopPropagation(); location.href='Din_plan-height.html';">
+    <button class="button button__primary--big" onclick="event.stopPropagation(); location.href='din_plan-height.html';">
       <img src="images/play_icon.svg" alt="" class="button__icon button__icon--big" />
       Start
     </button>
