--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <section class="banners">
-      <a href="Din_plan.html" class="banner banner--plan">
+      <a href="din_plan.html" class="banner banner--plan">
         <img src="images/DinPlan_Illustration.svg" alt="Man guiding child" class="banner__illustration" />
         <section class="banner__content">
           <h4 class="banner__title banner__title--highlight">Din plan</h4>
