--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="banner__content">
           <h4 class="banner__title banner__title--highlight">Din plan</h4>
           <p class="banner__subtitle banner__subtitle--highlight">Bliv guidet rundt</p>
-          <button class="button button--highlight" onclick="event.stopPropagation(); location.href='Din_plan.html';">
+          <button class="button button--highlight" onclick="event.stopPropagation(); location.href='din_plan.html';">
             <img src="images/play_icon.svg" alt="" class="button__icon">Start
           </button>
         </section>
