new pages, new roots

--- a/din_plan-height.html
+++ b/din_plan-height.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Document</title>
+  <title>height</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -43,12 +43,13 @@
   </section>
 
   <section class="step-indicator">
-    <a href="din_plan-height.html" class="step-indicator__step step-indicator__step--active">1</a>
-    <span class="step-indicator__line step-indicator__line--active"></span>
-    <a href="din_plan-food.html" class="step-indicator__step">2</a>
+    <a href="#" class="step-indicator__step step-indicator__step--active">1</a>
+    <span class="step-indicator__line step-indicator__line--gradient"></span>
+    <a href="#" class="step-indicator__step">2</a>
     <span class="step-indicator__line"></span>
-    <a href="din_plan-shows.html" class="step-indicator__step">3</a>
+    <a href="#" class="step-indicator__step">3</a>
   </section>
+  
 
   <section class="step__nav">
     <a href="din_plan.html" class="button button--secondary">
@@ -62,5 +63,6 @@
   </section>
 
   <script src="JSHeight.js"></script>
+  <script src="step.js"></script>
 </body>
 </html>
