put Alt text and put arrows inside correct section

--- a/din_plan-food.html
+++ b/din_plan-food.html
@@ -58,7 +58,7 @@
       <span>Tilbage</span>
     </a>
     <a href="din_plan-shows.html" class="button button--primary">
-      <img src="images/play_icon.svg" alt="" class="button__icon" />
+      <img src="images/play_icon.svg" alt="Next icon" class="button__icon" />
       <span>Næste</span>
     </a>
   </section>
