--- a/din_plan-shows.html
+++ b/din_plan-shows.html
@@ -38,7 +38,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">Læs mere</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+          <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -66,7 +66,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">read more</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+          <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -93,7 +93,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">Læs mere</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+          <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -120,7 +120,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">Læs mere</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+          <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -147,7 +147,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">Læs mere</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+                    <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -175,7 +175,7 @@
         <!-- 👇 this will move up/down using JS -->
         <p class="show__toggle">
           <span class="show__toggle-text">Læs mere</span>
-          <img src="images/icon_dropdown.svg" alt="" class="show__arrow" />
+          <img src="images/icon_dropdown.svg" alt="arrow that unfolds so one can read more" class="show__arrow" />
         </p>
       </section>
   
@@ -206,7 +206,9 @@
 </section>
           
           
-          <script src="JSShows.js"></script>
-          <script src="step.js"></script>
+<script src="JSShows.js"></script>
+<script src="step.js"></script>
+</section>
+</section>
 </body>
 </html>
