--- a/din_plan-height.html
+++ b/din_plan-height.html
@@ -53,7 +53,7 @@
 
   <section class="step__nav">
     <a href="din_plan.html" class="button button--secondary">
-      <img src="images/arrow_back-white.svg" class="button__icon" />
+      <img src="images/arrow_back-white.svg" alt="back icon" class="button__icon" />
       <span>Tilbage</span>
     </a>
     <a href="din_plan-food.html" class="button button--primary">
