--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <section class="homepage__shows">
       <h2 class="section__title">Shows i dag</h2>
-      <img src="images/arrow_left.svg" alt="Scroll left" class="shows__arrow shows__arrow--left" />
 
       <section class="shows__container">
+        <img src="images/arrow_left.svg" alt="Scroll left" class="shows__arrow shows__arrow--left" />
         <ul class="shows__list">
           <li class="shows__item">
             <img src="images/fulldome_show.svg" alt="Fulldome Show" class="shows__image">
@@ -53,22 +53,21 @@
             <time class="shows__time">16:00</time>
           </li>
         </ul>
+        <img src="images/arrow_right.svg" alt="Scroll right" class="shows__arrow shows__arrow--right" />
       </section>
-
-      <img src="images/arrow_right.svg" alt="Scroll right" class="shows__arrow shows__arrow--right" />
     </section>
 
     <section class="banners">
-      <a href="din_plan.html" class="banner banner--plan">
-        <img src="images/DinPlan_Illustration.svg" alt="Man guiding child" class="banner__illustration" />
-        <section class="banner__content">
-          <h4 class="banner__title banner__title--highlight">Din plan</h4>
-          <p class="banner__subtitle--highlight">Bliv guidet rundt</p>
-          <button class="button button--highlight" onclick="event.stopPropagation(); location.href='din_plan.html';">
-            <img src="images/play_icon.svg" alt="" class="button__icon">Start
-          </button>
-        </section>
-      </a>
+ <a href="din_plan.html" class="banner banner--plan">
+  <img src="images/DinPlan_Illustration.svg" alt="Man guiding child" class="banner__illustration" />
+  <section class="banner__content">
+    <h4 class="banner__title banner__title--highlight">Din plan</h4>
+    <p class="banner__subtitle--highlight">Bliv guidet rundt</p>
+    <span class="button button--highlight">
+      <img src="images/play_icon.svg" alt="" class="button__icon">Start
+    </span>
+  </section>
+</a>
 
       <section class="banner banner--attractions">
         <img src="images/banner_attractions.svg" alt="" class="banner__illustration">
